bin/testsuite/tests/compiler/src/errors/compiler1568.swg
#global testerror "Err0364"

//#[Swag.PrintBc]
#test
{
    var a = 0
    switch a
    {
        case :
        break
    }
}
